also manage service_check_timeout

--- a/templates/etc/icinga/icinga.cfg.erb
+++ b/templates/etc/icinga/icinga.cfg.erb
@@ -684,7 +684,7 @@ sleep_time=0.25
 # the default of 60sec.
 
 #service_check_timeout=120
-service_check_timeout=60
+service_check_timeout=<%= @check_timeout %>
 host_check_timeout=30
 event_handler_timeout=30
 notification_timeout=30
